# Mindbender-Solver

./: .gdbinit  .gitignore  BHeuristic.hpp  CMakeLists.txt  CMakePresets.json  LHeuristic.hpp  README.md  TODO.md  TestKnownSolutions.cpp  UnitTesting.cpp  fib.cpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  test11MoveSolution.cpp  testFuncs.h  testHeuristics.cpp  testSorting.cpp
MindbenderSolver/: include.hpp
MindbenderSolver/all_levels/: 11-2_c11_56.txt  2-1_c3_3.txt  3-3_c4_2.txt  4-2_c9_393.txt  4-4_c7_12.txt  4-5_c9_57663.txt  6-5_c10_8.txt  7-1_c11_375.txt  7-5_c11_22.txt  8-1_c10_154.txt  8-2_c8_92.txt  9-5_c9_1079.txt
MindbenderSolver/code/: board.cpp  board.cu  board.hpp  intersection.hpp  levels.cpp  levels.hpp  memory.cpp  memory.cu  memory.hpp  perms.cpp  perms.hpp  perms.tpp  perms_fat.tpp  perms_gen.hpp  perms_nrm.tpp  reference.hpp  rotations.cpp  rotations.cu  rotations.hpp  rotations_row.cpp  score3.java  segments.hpp  solver.hpp  sorter.hpp
MindbenderSolver/docs/: better_perm_code.md  score3.java  thinking.md  unused_code.txt
MindbenderSolver/levels/: 1-5_c3_5.txt  11-4_c9_1.txt  6-5_c10_8.txt  8-1_c10_12.txt  8-2_c8_92.txt
MindbenderSolver/pretty-printers/: memory_printer.py
MindbenderSolver/programs/: TestKnownSolutions.cpp  UnitTesting.cpp  ensurePuzzlesValid.cpp  test11MoveSolution.cpp  testDFS.cpp  testHeuristics.cpp  testJVec.cpp  testKnownSolutions.cpp  testLayeredDFS.cpp  testPerms.cpp  testPuzzlesValid.cpp  testSorting.cpp
MindbenderSolver/pyth/: main.py
MindbenderSolver/solver/: board.cpp  board.hpp  levels.hpp  memory.cpp  memory.hpp  permutations.cpp  permutations.hpp  rotations.hpp  score3.java
MindbenderSolver/unused/: sorter.hpp  th_parallel_sort.hpp  th_radix_sort.hpp
MindbenderSolver/utils/: colors.cpp  colors.hpp  format_bytes.hpp  get_free_memory.hpp  hasGetHash.hpp  jvec.hpp  processor.hpp  th_radix_sort.hpp  (+3 more)
all_levels/: 1-1_c2_1.txt  1-2_c2_2.txt  1-4_c3_3.txt  1-5_c3_5.txt  11-1_c12_12.txt  11-4_c9_4.txt  2-2_c5_4.txt  2-3_c6_918.txt  2-4_c4_3.txt  2-5_c3_3.txt  3-1_c3_2.txt  3-4_c6_24.txt  4-3_c7_881.txt  5-2_c8_297.txt  5-3_c7_74.txt  5-5_c10_90.txt  6-2_c17_476.txt  7-3_c9_2784.txt  8-4_c8_16.txt  8-5_c8_63.txt  9-1_c8_164.txt  9-2_c12_78.txt  9-4_c7_608.txt  9-4_c8_52214.txt
bad_code/: action_helper.hpp
code/: allowed_type.hpp  board.cpp  board.hpp  board_hash_segments.hpp  frontier_builder.hpp  frontier_recovery.hpp  frontier_right_index.hpp  include.hpp  intersection.hpp  levels.cpp  levels.hpp  levels_cells.hpp  memory.cpp  memory.hpp  memory_perm_gen.hpp  perm_stream.hpp  perm_stream_fat.tpp  perm_stream_nrm.tpp  perms.cpp  perms.hpp  perms_fat.tpp  perms_gen.hpp  perms_nrm.tpp  right_cache_index.hpp  rotations.cpp  rotations.hpp  rotations_col.cpp  rotations_cuda.cpp  rotations_cuda.hpp  rotations_row.cpp  segments.hpp  solver.hpp  solver_base.hpp  solver_direct.hpp  solver_frontier.hpp  sorter.hpp
docs/: getScore3_old.txt  gpu_impl.md  possible_memory_saver.txt  smaller_hashes.txt  sort_times.txt  thinking.md
levels/: 1-1_c2_1.txt  1-2_c2_2.txt  1-4_c3_3.txt  1-5_c3_5.txt  10-4_c10_9.txt  11-1_c12_1.txt  11-2_c11_2.txt  11-3_c8_16.txt  11-3_c8_223.txt  12-2_c8_17.txt  12-4_c10_8695.txt  12-4_c9_11.txt  12-4_c9_52.txt  14-1_c11_215.txt  2-1_c3_3.txt  2-5_c3_3.txt  3-3_c4_2.txt  3-4_c6_10.txt  3-5_c4_6.txt  4-1_c4_24.txt  4-2_c10_43255.txt  4-2_c9_419.txt  4-2_c9_88.txt  4-3_c7_541.txt  4-4_c7_16.txt  4-4_c7_6.txt  4-4_c8_128.txt  4-4_c8_755.txt  4-5_c9_10242.txt  5-2_c8_127.txt  5-3_c10_90234.txt  5-3_c7_17.txt  5-3_c7_22.txt  5-4_c8_221.txt  5-4_c8_30.txt  5-4_c8_54.txt  5-4_c8_91.txt  5-5_c10_7.txt  6-1_c15_3.txt  6-2_c17_16.txt  (+24 more)
levels_all/: 10-4_c10_27.txt  11-3_c8_74.txt  12-2_c8_5.txt  12-4_c9_46.txt  2-3_c6_702.txt  3-1_c3_2.txt  3-2_c4_20.txt  3-5_c4_8.txt  4-1_c4_30.txt  5-3_c7_14.txt  5-3_c7_18.txt  5-3_c7_24.txt  5-4_c8_104.txt  5-4_c8_12.txt  5-4_c8_140.txt  5-4_c8_227.txt  5-4_c8_32.txt  6-1_c15_28.txt  6-5_c10_16.txt  7-1_c11_339.txt  7-1_c11_39.txt  7-2_c10_20.txt  7-2_c10_24.txt  7-2_c10_5.txt  7-3_c9_181.txt  7-3_c9_459.txt  7-4_c12_2.txt  7-4_c12_64.txt  8-1_c10_102.txt  8-3_c11_56.txt  8-5_c8_855.txt  9-4_c7_602.txt  9-4_c8_5896.txt
levels_exp/: 4-1_c4_30.txt  4-2_c9_393.txt  4-4_c7_16.txt  4-4_c8_755.txt  5-4_c8_227.txt  7-1_c11_838.txt  7-4_c12_692.txt  7-5_c11_36.txt  8-1_c10_154.txt  8-3_c11_74.txt  9-2_c12_102.txt  9-4_c7_608.txt
levels_final/: 1-2_c2_2.txt  1-3_c1_1.txt  10-1_c11_50.txt  10-4_c11_4681.txt  10-5_c10_36.txt  11-1_c12_6189.txt  11-2_c11_162.txt  11-4_c10_7834.txt  11-4_c9_12.txt  11-5_c11_1363.txt  13-2_c10_88.txt  19-1_c10_1071.txt  2-4_c4_3.txt  20-1_c12_3155.txt  3-4_c6_24.txt  4-2_c9_497.txt  4-3_c7_881.txt  5-2_c8_297.txt  6-3_c12_6.txt  6-5_c10_8.txt  7-3_c9_2784.txt  9-5_c9_1079.txt
ml_torch/: CMakeLists.txt
ml_torch/src/: main.cpp
ml_torch/src/common/: board_encoder.hpp  constants.hpp
ml_torch/src/model/: distance_net.cpp  distance_net.hpp
ml_torch/src/train/: infer_deep_main.cpp  train_deep_main.cpp
mouse/: CMakeLists.txt
mouse/include/: chuzzle_mouse_api.h
mouse/src/: chuzzle_mouse.c
programs/: CFCC.cpp  UnitTesting.cpp  analyzeLevelsFinalHeuristic.cpp  benchmarkMatchingBound.cpp  debug_intersection_4_4.cpp  expandAllLevels.cpp  findSolutions.cpp  generate_ml_training_data.cpp  main.cpp  test11MoveSolution.cpp  test12MoveHeuristicAtHalf.cpp  testDFS.cpp  testDepth4Direct.cpp  testDepth4DirectFat.cpp  testHeuristics.cpp  testHeuristicsOnLeftSeed.cpp  testJVec.cpp  testKnownSolutions.cpp  testLayeredDFS.cpp  testLeftGenRightCache.cpp  testPerms.cpp  testPuzzlesValid.cpp  testRotations.cpp  testSingleUnrolledLoop.cpp  testSorting.cpp
pyth/: append_size.py  find_dif.py  main.py  make_all_levels.py  make_fatActions_list.py  mask_maker.py  permutations.py  remove_end.py  sim.py
shit_code/: main.cpp
utils/: allocation_counter.cpp  allocation_counter.hpp  colors.cpp  colors.hpp  format_bytes.hpp  get_free_memory.hpp  hasGetHash.hpp  jvec.cpp  jvec.hpp  processor.hpp  th_parallel_sort.hpp  th_radix_sort.hpp  timer.hpp  timestamped_cout.hpp
(+53 files in other folders)
